bug: removed max-height to fix image overlap

--- a/.dev/app/src/scss/page/_terrain-set.scss
+++ b/.dev/app/src/scss/page/_terrain-set.scss
@@ -65,7 +65,6 @@
 
 		.terrain-rules-image {
 			max-width: 300px;
-			max-height: 300px;
 			margin: 0 auto $gutter*3;
 			flex: 1;
 
